--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,3 +33,15 @@ img {
 .swiper-pagination-bullet-active {
   background: #ff6900 !important; /* gold */
 }
+
+/* Custom scrollbar */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgb(189, 189, 189);
+  border-radius: 8px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #f97316;
+}
